updated my css file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <link rel="stylesheet" href="/assets/css/owl.carousel.css">
 
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+
     <link rel="stylesheet" href="/assets/css/style.css">
 
     
@@ -160,7 +162,7 @@
                 </a>
             </div>
         </div>
-        <hr style="width:500px; margin: auto;">
+        <hr>
     </div>
 </section>
 <!-- PROJECTS SECTION ENDS -->
@@ -231,7 +233,7 @@
                 <img src="/assets/images/materialUI.png" alt="">
             </div>
         </div>
-        <hr style="width:500px; margin: auto;">
+        <hr>
     </div>
 </section>
 <!-- SKILLS SECTION ENDS -->
@@ -260,7 +262,7 @@
                 <img src="/assets/images/5.png" alt="">
             </div>
         </div>
-        <hr style="width:500px; margin: auto;">
+        <hr>
     </div>
 </section>
 <!-- SKILLS SECTION ENDS -->
