created more spacing

--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Poppins:wght@200;300;400;500;600;700&family=Suranna&display=swap" 
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Raleway:wght@200;300;400;500;600;700&family=Suranna&display=swap" 
     rel="stylesheet">
 
     <link rel="stylesheet" href="/assets/css/owl.carousel.css">
-
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 
     <link rel="stylesheet" href="/assets/css/style.css">
 
@@ -80,7 +78,7 @@
             </div>
 
             <div class="experienceInfo">
-                <h5>+10</h5>
+                <h5>5+</h5>
                 <p>Projects Completed</p>
             </div>
 
@@ -129,8 +127,8 @@
 <!-- PROJECTS SECTION STARTS -->
 <section id="projects">
     <div class="container">
-        <h3 style="text-align: center;">PROJECTS</h3>
-        <div class="row logo-carousel-inner" style="margin: 1rem 0;">
+        <h3 style="text-align: center; margin: 3rem 0;">PROJECTS</h3>
+        <div class="row logo-carousel-inner">
             <div >
                 <a href="https://classmonitor.netlify.app/" target="_blank" class="single-logo-item">
                     <img src="/assets/images/1.png" alt="">
@@ -162,7 +160,8 @@
                 </a>
             </div>
         </div>
-        <hr>
+        <!-- <hr  style="margin-top: 1.5rem;"> -->
+        <div class="horizontalLine1" ></div>
     </div>
 </section>
 <!-- PROJECTS SECTION ENDS -->
@@ -170,8 +169,8 @@
 <!-- SKILLS SECTION STARTS -->
 <section id="skills">
     <div class="container">
-        <h3 style="text-align: center;">SKILLS</h3>
-        <div class="row logo-carousel-inner" style="margin-top: 1rem;">
+        <h3 style="text-align: center; margin: 3rem 0">SKILLS</h3>
+        <div class="row logo-carousel-inner">
             <div class="single-logo-item">
                 <h5>HTML 5</h5>
                 <img src="/assets/images/html.png" alt="">
@@ -233,7 +232,7 @@
                 <img src="/assets/images/materialUI.png" alt="">
             </div>
         </div>
-        <hr>
+        <div class="horizontalLine2" ></div>
     </div>
 </section>
 <!-- SKILLS SECTION ENDS -->
@@ -241,7 +240,7 @@
 <!-- SKILLS SECTION STARTS -->
 <section id="certs" style="margin-bottom: 3rem;">
     <div class="container">
-        <h3 style="text-align: center;">CERTIFICATIONS</h3>
+        <h3 style="text-align: center;margin:3rem 0;">CERTIFICATIONS</h3>
         <div class="row logo-carousel-inner">
             <div>
                 <a href="https://drive.google.com/file/d/1_WtR-sXc-tMvra3tYofKRFPBY9SjMkd-/view?usp=sharing" target="_blank" class="single-logo-item">
@@ -262,7 +261,7 @@
                 <img src="/assets/images/5.png" alt="">
             </div>
         </div>
-        <hr>
+        <div class="horizontalLine3" ></div>
     </div>
 </section>
 <!-- SKILLS SECTION ENDS -->
