added contact links

--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                 </div>
             </a>
             
-            <a href="#">
+            <a href="https://wa.me/2348139362969">
                 <div class="whatsApp">
                     <i class="ri-whatsapp-line"></i>
                 </div>
             </a>
-            
-            <a href="#">
+
+            <a href="mailto:igboekwulusifranklin@gmail.com">
                 <div class="mail">
                     <i class="ri-mail-line"></i>
                 </div>
