added contact links

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     <section id="socialMedia">
         <div class="container">
             <div class="row">
-                <a href="#"><i class="ri-github-fill"></i></a>
-                <a href="#"><i class="ri-facebook-circle-fill"></i></a>
-                <a href="#"><i class="ri-linkedin-box-fill"></i></a>
-                <a href="#"><i class="ri-twitter-fill"></i></a>
+                <a href="https://github.com/Franklin-raph"><i class="ri-github-fill"></i></a>
+                <a href="https://www.facebook.com/franklinraphael.aloysius/"><i class="ri-facebook-circle-fill"></i></a>
+                <a href="https://www.linkedin.com/in/franklin-chinedu/"><i class="ri-linkedin-box-fill"></i></a>
+                <a href="https://twitter.com/Frank_Dev007"><i class="ri-twitter-fill"></i></a>
             </div>
         </div>
     </section>
@@ -101,9 +101,9 @@
 <section id="cvAndContact">
     <div class="container">
         <div class="row">
-            <a href="#">
+            <a href="/myCV.pdf" target="_blank">
                 <div class="downloadCvBtn">
-                    <h5>Download CV <i class="ri-download-2-fill"></i></h5>
+                    <h6 style="font-size: 16px;">Checkout my resume <i class="ri-eye-line" style="font-weight: 200;"></i></h6>
                 </div>
             </a>
             
