updated the index file

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 <section id="cvAndContact">
     <div class="container">
         <div class="row">
-            <a href="/myCV.pdf" target="_blank">
+            <a href="assets/myCV.pdf" target="_blank">
                 <div class="downloadCvBtn">
-                    <h6 style="font-size: 16px;">Checkout my resume <i class="ri-eye-line" style="font-weight: 200;"></i></h6>
+                    <h6 style="font-size: 16px;">View Resume <i class="ri-eye-line" style="font-weight: 200;"></i></h6>
                 </div>
             </a>
             
@@ -138,27 +138,27 @@
             <div>
                 <a href="https://classmonitoradmin.netlify.app/" target="_blank" class="single-logo-item">
                     <img src="/assets/images/2.png" alt="">
-                    <h5>Class Monitor Admin Web App</h5>
+                    <h5>Class Monitor Admin</h5>
                 </a>
             </div>
             <div>
                 <a href="https://frankschoolmanagementsystem.herokuapp.com/" target="_blank" class="single-logo-item">
-                    <img src="/assets/images/3.png" alt="">
+                    <img src="/assets/images/book-open-fill.svg" style="width: 3.5rem;" alt="">
                     <h5>School Management System</h5>
                 </a>
             </div>
             <div>
                 <a href="https://ieee-nau.github.io/" target="_blank" class="single-logo-item">
-                    <img src="/assets/images/4.png" alt="">
+                    <img src="/assets/images/ieee&nau.png" style="width: 8rem;" alt="">
                     <h5>IEEE UNIZIK</h5>
                 </a>
             </div>
-            <div>
+            <!-- <div>
                 <a href="####" target="_blank" class="single-logo-item">
                     <img src="/assets/images/4.png" alt="">
                     <h5>New Project</h5>
                 </a>
-            </div>
+            </div> -->
         </div>
         <!-- <hr  style="margin-top: 1.5rem;"> -->
         <div class="horizontalLine1" ></div>
@@ -249,17 +249,23 @@
                 </a>
             </div>
             <div class="single-logo-item">
-                <img src="/assets/images/2.png" alt="">
+                <a href="https://drive.google.com/file/d/1QsXlTnwQSsGBHiEsZs1tuGwLpbe4WfiD/view?usp=sharing" target="_blank" class="single-logo-item">
+                    <img src="/assets/images/Arduino training certificate_1.jpg" alt="">
+                    <h5>Robotics and Microcontroller</h5>
+                </a>
             </div>
             <div class="single-logo-item">
-                <img src="/assets/images/3.png" alt="">
+                <a href="https://drive.google.com/file/d/1cc-ztyNQtlpnS3IU-rx6IqjaTwBYgW68/view?usp=sharing" target="_blank" class="single-logo-item">
+                    <img src="/assets/images/Igboekwulusi Franklin_IEEE.jpg" alt="">
+                    <h5>SPAC Certification</h5>
+                </a>
             </div>
-            <div class="single-logo-item">
+            <!-- <div class="single-logo-item">
                 <img src="/assets/images/4.png" alt="">
             </div>
             <div class="single-logo-item">
                 <img src="/assets/images/5.png" alt="">
-            </div>
+            </div> -->
         </div>
         <div class="horizontalLine3" ></div>
     </div>
