updated the index file

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <div class="single-logo-item">
                 <a href="https://drive.google.com/file/d/1QsXlTnwQSsGBHiEsZs1tuGwLpbe4WfiD/view?usp=sharing" target="_blank" class="single-logo-item">
                     <img src="/assets/images/Arduino training certificate_1.jpg" alt="">
-                    <h5>Robotics and Microcontroller</h5>
+                    <h5>Robotics Certification</h5>
                 </a>
             </div>
             <div class="single-logo-item">
