added an image for the school management system icon

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
             </div>
             <div>
                 <a href="https://frankschoolmanagementsystem.herokuapp.com/" target="_blank" class="single-logo-item">
-                    <img src="/assets/images/book-open-fill.svg" style="width: 3.5rem;" alt="">
-                    <h5>School Management System</h5>
+                    <img src="/assets/images/schmgt.png" style="width: 3.5rem;" alt="">
+                    <h5>School Magt. System</h5>
                 </a>
             </div>
             <div>
