added an image for class monitor icon

--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
         <div class="row logo-carousel-inner">
             <div >
                 <a href="https://classmonitor.netlify.app/" target="_blank" class="single-logo-item">
-                    <img src="/assets/images/1.png" alt="">
+                    <img src="/assets/images/clasMonitor.png" alt="">
                     <h5>Class Monitor Web App</h5>
                 </a>
             </div>
             <div>
                 <a href="https://classmonitoradmin.netlify.app/" target="_blank" class="single-logo-item">
-                    <img src="/assets/images/2.png" alt="">
+                    <img src="/assets/images/clasMonitor.png" alt="">
                     <h5>Class Monitor Admin</h5>
                 </a>
             </div>
