updated my project section

--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
                     <h5>IEEE UNIZIK</h5>
                 </a>
             </div>
-            <!-- <div>
-                <a href="####" target="_blank" class="single-logo-item">
-                    <img src="/assets/images/4.png" alt="">
-                    <h5>New Project</h5>
+            <div>
+                <a href="https://frankbooklist.netlify.app/" target="_blank" class="single-logo-item">
+                    <img src="/assets/images/clasMonitor.png" alt="">
+                    <h5>Book List App</h5>
                 </a>
-            </div> -->
+            </div>
         </div>
         <!-- <hr  style="margin-top: 1.5rem;"> -->
         <div class="horizontalLine1" ></div>
