updated my project section

--- a/index.html
+++ b/index.html
@@ -130,21 +130,21 @@
         <h3 style="text-align: center; margin: 3rem 0;">PROJECTS</h3>
         <div class="row logo-carousel-inner">
             <div >
-                <a href="https://classmonitor.netlify.app/" target="_blank" class="single-logo-item">
+                <a href="https://franknoteapp.netlify.app/" target="_blank" class="single-logo-item">
                     <img src="/assets/images/clasMonitor.png" alt="">
-                    <h5>Class Monitor Web App</h5>
+                    <h5>My Note Application</h5>
                 </a>
             </div>
             <div>
-                <a href="https://classmonitoradmin.netlify.app/" target="_blank" class="single-logo-item">
+                <a href="https://franktictactoe.netlify.app/" target="_blank" class="single-logo-item">
                     <img src="/assets/images/clasMonitor.png" alt="">
-                    <h5>Class Monitor Admin</h5>
+                    <h5>Tic Tac Toe</h5>
                 </a>
             </div>
             <div>
-                <a href="https://frankschoolmanagementsystem.herokuapp.com/" target="_blank" class="single-logo-item">
-                    <img src="/assets/images/schmgt.png" style="width: 3.5rem;" alt="">
-                    <h5>School Magt. System</h5>
+                <a href="https://frankrestcountriesapi.netlify.app/" target="_blank" class="single-logo-item">
+                    <img src="/assets/images/clasMonitor.png" style="width: 3.5rem;" alt="">
+                    <h5>REST countries API project</h5>
                 </a>
             </div>
             <div>
@@ -154,9 +154,15 @@
                 </a>
             </div>
             <div>
-                <a href="https://frankbooklist.netlify.app/" target="_blank" class="single-logo-item">
+                <a href="http://mystudentsrecords.netlify.app/" target="_blank" class="single-logo-item">
                     <img src="/assets/images/clasMonitor.png" alt="">
-                    <h5>Book List App</h5>
+                    <h5>My Students Records App</h5>
+                </a>
+            </div>
+            <div>
+                <a href="http://frankai.netlify.app/" target="_blank" class="single-logo-item">
+                    <img src="/assets/images/clasMonitor.png" alt="">
+                    <h5>Frank AI</h5>
                 </a>
             </div>
         </div>
